CXBOX-355 Pagination mode (#34)
* CXBOX-355 Pagination mode