@@ -29,7 +29,6 @@ import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
@@ -40,6 +39,7 @@ import org.cxbox.api.data.dto.DataResponseDTO;
 import org.cxbox.api.exception.ServerException;
 import org.cxbox.constgen.DtoField;
 import org.cxbox.core.config.cache.CacheConfig;
+import org.cxbox.core.config.properties.APIProperties;
 import org.cxbox.core.crudma.bc.BusinessComponent;
 import org.cxbox.core.crudma.bc.impl.AnySourceCrudmaImplementation;
 import org.cxbox.core.crudma.impl.inner.AnySourceCrudmaService;
@@ -70,6 +70,7 @@ import org.cxbox.core.service.rowmeta.RowMetaType;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.context.ApplicationContext;
+import org.springframework.data.domain.Page;
 import org.springframework.transaction.annotation.Transactional;
 
 @Slf4j
@@ -102,6 +103,10 @@ public abstract class AbstractAnySourceResponseService<T extends DataResponseDTO
 
 	@Autowired
 	private List<AnySourceBaseDAO<E>> anySourceBaseDAOs;
+
+	@Autowired
+	private APIProperties apiProperties;
+
 
 	@Override
 	public AnySourceBaseDAO<E> getBaseDao() {
@@ -219,10 +224,10 @@ public abstract class AbstractAnySourceResponseService<T extends DataResponseDTO
 
 	@Override
 	public ResultPage<T> getList(BusinessComponent bc) {
-		//TODO hasNext hardcode
+		Page<E> page = getBaseDao().getList(bc, bc.getParameters());
 		return entitiesToDtos(
 				bc,
-				ResultPage.of(getBaseDao().getList(bc, bc.getParameters()).stream().collect(Collectors.toList()), false)
+				ResultPage.of(page.stream().toList(), apiProperties.isAnySourceHasNextEnabled() ? page.hasNext() : false)
 		);
 	}
 
